Fix for horizontal scroll bar on mobile sized demo site

--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -93,6 +93,7 @@ pre {
     border-radius: 10px;
     box-decoration-break: clone;
     line-height: 2;
+    word-wrap: break-word;
   }
 }
 
